footer section done

--- a/index.html
+++ b/index.html
@@ -96,12 +96,61 @@
     <!-- banner sections end -->
 
     <!-- footer section start -->
-    <div class=" bg-gray-200  ">
+    <div class=" bg-gray-300   mx-auto">
+
+        <div class=" container px-4  py-10 mx-auto">
+
         <div class="text-center ">
     <h3 class="text-2xl font-semibold">WHAT WE DO</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsa incidunt magni quasi aliquid unde ex officiis quisquam voluptatum? Sunt.</p>
+    <div class="bg-gray-500  w-72 h-1 mx-auto mt-3 "></div>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  mx-auto">
+
+        <div class="container mx-auto w-60 h-68  mt-5 shadow-lg py-2 bg-gray-100 rounded-lg ">
+            <svg width="64px" height="64px" class="mx-auto" viewBox="0 0 32 32" enable-background="new 0 0 32 32" id="Stock_cut" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <desc></desc> <g> <circle cx="16" cy="16" fill="none" r="15" stroke="#000000" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></circle> <path d="M26,27L26,27 c0-5.523-4.477-10-10-10h0c-5.523,0-10,4.477-10,10v0" fill="none" stroke="#000000" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></path> <circle cx="16" cy="11" fill="none" r="6" stroke="#000000" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></circle> </g> </g></svg>
+            <h2 class="text-center  font-semibold">MARKETING INTELLIGENCE</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur aliquam optio totam quaerat adipisci cupiditate, minima pariatur reprehenderit non!</p>
+            <div class="text-center  text-white bg-indigo-700 p-4 mt-2 w-32 rounded-lg mx-auto">
+            <a href="#" >READ MORE</a>
+        </div>
         </div>
 
+        <div class="container mx-auto w-60 h-68  mt-5 shadow-lg py-2 bg-gray-100 rounded-lg">
+            <svg width="64px" height="64px" class="mx-auto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7.0498 7.0498H7.0598M10.5118 3H7.8C6.11984 3 5.27976 3 4.63803 3.32698C4.07354 3.6146 3.6146 4.07354 3.32698 4.63803C3 5.27976 3 6.11984 3 7.8V10.5118C3 11.2455 3 11.6124 3.08289 11.9577C3.15638 12.2638 3.27759 12.5564 3.44208 12.8249C3.6276 13.1276 3.88703 13.387 4.40589 13.9059L9.10589 18.6059C10.2939 19.7939 10.888 20.388 11.5729 20.6105C12.1755 20.8063 12.8245 20.8063 13.4271 20.6105C14.112 20.388 14.7061 19.7939 15.8941 18.6059L18.6059 15.8941C19.7939 14.7061 20.388 14.112 20.6105 13.4271C20.8063 12.8245 20.8063 12.1755 20.6105 11.5729C20.388 10.888 19.7939 10.2939 18.6059 9.10589L13.9059 4.40589C13.387 3.88703 13.1276 3.6276 12.8249 3.44208C12.5564 3.27759 12.2638 3.15638 11.9577 3.08289C11.6124 3 11.2455 3 10.5118 3ZM7.5498 7.0498C7.5498 7.32595 7.32595 7.5498 7.0498 7.5498C6.77366 7.5498 6.5498 7.32595 6.5498 7.0498C6.5498 6.77366 6.77366 6.5498 7.0498 6.5498C7.32595 6.5498 7.5498 6.77366 7.5498 7.0498Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+            <h2 class="text-center  font-semibold"> DIGITAL MARKETING</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur aliquam optio totam quaerat adipisci cupiditate, minima pariatur reprehenderit non!</p>
+            <div class="text-center  text-white bg-indigo-700 p-4 mt-2 w-32 rounded-lg mx-auto">
+            <a href="#" >READ MORE</a>
+        </div>
+        </div>
+
+        <div class="container mx-auto w-60 h-68  mt-5 shadow-lg py-2 bg-gray-100 rounded-lg">
+            <svg width="64px" height="64px" class="mx-auto" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill="#000000" fill-rule="evenodd" d="M9,4.73244 C9.5978,4.38663 10,3.74028 10,3 C10,1.89543 9.10457,1 8,1 C6.89543,1 6,1.89543 6,3 C6,3.74028 6.4022,4.38663 7,4.73244 L7,11 C7,12.1046 6.10457,13 5,13 C3.89543,13 3,12.1046 3,11 L6,8 L1,8 L1,11 C1,13.2091 2.79086,15 5,15 C6.19469,15 7.26706,14.4762 8,13.6458 C8.73295,14.4762 9.80531,15 11,15 C13.2091,15 15,13.2091 15,11 L15,8 L10,8 L13,11 C13,12.1046 12.1046,13 11,13 C9.89543,13 9,12.1046 9,11 L9,4.73244 Z"></path> </g></svg>
+            <h2 class="text-center  font-semibold">BRAND & STRATEGY</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur aliquam optio totam quaerat adipisci cupiditate, minima pariatur reprehenderit non!</p>
+            <div class="text-center  text-white bg-indigo-700 p-4 mt-2 w-32 rounded-lg mx-auto">
+            <a href="#" >READ MORE</a>
+        </div>
+        </div>
+
+        <div class="container mx-auto w-60 h-68  mt-5 shadow-lg py-2 bg-gray-100 rounded-lg ">
+            <svg fill="#000000" width="64px" height="64px" class="mx-auto" viewBox="0 0 122.88 122.88" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="enable-background:new 0 0 122.88 122.88" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style> <g> <path class="st0" d="M61.44,0c16.97,0,32.33,6.88,43.44,18c11.12,11.12,18,26.48,18,43.44c0,16.97-6.88,32.33-18,43.44 c-11.12,11.12-26.48,18-43.44,18S29.11,116,18,104.88C6.88,93.77,0,78.41,0,61.44C0,44.47,6.88,29.11,18,18 C29.11,6.88,44.47,0,61.44,0L61.44,0z M76.85,117.08L76.73,117l6.89-23.09L69.41,78.15L52.66,78L39.38,94.62l6.66,22.32l-0.15,0.1 c4.95,1.38,10.16,2.12,15.55,2.12C66.78,119.16,71.95,118.44,76.85,117.08L76.85,117.08z M12.22,91.61l24.34,0.12L49.28,75.8 l-5.26-16.12l-21.42-9.3L3.78,64.08C4.23,74.14,7.26,83.53,12.22,91.61L12.22,91.61z M16.77,24.88l7.4,22.14l19.98,8.68 l15.44-11.97V20.94L40.51,7.63c-7.52,2.93-14.28,7.39-19.89,13C19.27,21.98,17.98,23.4,16.77,24.88L16.77,24.88z M81.7,7.37 L63.3,20.77V43.7L77.8,54.91l20.81-8.92l7.18-21.49c-1.12-1.35-2.3-2.64-3.54-3.88C96.48,14.85,89.49,10.29,81.7,7.37L81.7,7.37z M119.09,64.36l-0.02,0.01L99.09,49.82l-19.81,8.49l-6.08,18.03l13.73,15.23c0.06,0.06,0.09,0.13,0.11,0.21l23.6-0.11 C115.56,83.65,118.59,74.34,119.09,64.36L119.09,64.36z"></path> </g> </g></svg>
+            <h2 class="text-center  font-semibold">BUSINESS DEVELOPMENT</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur aliquam optio totam quaerat adipisci cupiditate, minima pariatur reprehenderit non!</p>
+            <div class="text-center  text-white bg-indigo-700 p-4 mt-2 w-32 rounded-lg mx-auto">
+            <a href="#" >READ MORE</a>
+        </div>
+        </div>
+
+
+
+
+
+    </div>
+
+</div>
     </div>
 
 
