copyright section done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <h2 class="text-4xl font-semibold mt-1 text-white"> START-UP YOUR <br>  BUSINESS WITH US  </h2>
             <p class="mt-1 text-white text-xl  font-semibold  lg:w-2/3 mb-3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.Modi qui sapiente enim nobis consequuntur pariatur eos,bexplicabo  tenetur. Odio illo velit repellat animi obcaecati neque totam saepe consectetur sit iure!</p>          
         </div>
+
            <div class="  w-32 text-center text-white p-3 rounded-lg text-lg  font-semibold bg-transparent border border-white  mx-auto lg:m-0 ">
             <a href="#">READ MORE</a>
             </div>
@@ -62,9 +63,11 @@
     <!-- banner sections start -->
     <div class="container mx-auto ">
     <h2 class="text-center font-semibold mt-3 text-2xl text-gray-900">WELCOME TO BUSINESS START-UP</h2>
+
     <div class="text-center text-gray-500 ">
     <p >Lorem ipsum dolor sit, amet consectetur optio dolore tempora velit<br> sunt facilis architecto. Exercitation quos!</p>
     </div>
+
     <div class="bg-gray-500  w-72 h-1 mx-auto mt-3 "></div>
     </div>
 
@@ -152,12 +155,17 @@
 
 </div>
     </div>
-
-
-
-
     <!-- footer section end -->
 
+    <!-- copyright section -->
+
+    <div class="bg-gray-300  text-center py-2">
+        <p class="font-semibold ">@2023 Gift. All right reserved.</p>
+
+    </div>
+
+
+    <!-- copyright section end -->
 
 
 
